# soap

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
examples/: README.md  dag.rs  dag_hybrid_1.rs  dag_hybrid_2.rs  dag_tester.py
scripts/: feature_engineering_v0.0.1.py  one_hot_v1.0.0.py  one_hot_v1.2.0.py  one_hot_v1.3.0.py
src/: lib.rs  load_test.rs  main.rs  versioned_modules.rs  watcher.rs
src/dag_orchestrator/: mod.rs  tests.rs
src/snakes/: feature_engineering.rs  mod.rs  onehot.rs
tests/integration/: test_dag.py
tests/test_server/: Cargo.toml
tests/test_server/src/: main.rs
