[package]
name = "soap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.17", features = ["extension-module", "auto-initialize"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive", "env"] }
semver = "1.0"
regex = "1.5"
notify = "6.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rand = "0.8"
futures = "0.3"
tower = { version = "0.4", features = ["buffer"] }
tower-http = { version = "0.4", features = ["trace"] }
governor = "0.6"
nonzero_ext = "0.3"
futures-util = "0.3"
dashmap = "5"
uuid = { version = "1.0", features = ["v4"] }

[lib]
name = "soap"
path = "src/lib.rs"

[[bin]]
name = "soap"
path = "src/main.rs"

[[bin]]
name = "load_test"
path = "src/load_test.rs"