[package]
name = "test-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_server"
path = "src/main.rs"

[dependencies]
soap = { path = "../.." }
tokio = { version = "1.0", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"